# VikeSesh

./: .gitignore  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
backend/: __init__.py  app.py  models.py  pyproject.toml  queries_and_routes.py  requirements.txt  seed.py  test_models.py
backend/instance/: vikesesh.db
backend/routes/: groups.py
frontend/: .gitignore  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/signup/: countries.ts  footer.tsx  page.tsx
frontend/src/app/verify/: card.tsx  page.tsx
frontend/src/components/ui/: combobox.tsx  field.tsx  select.tsx
instance/: vikesesh.db
migrations/versions/: 29a80c7bb16d_add_students_and_otps_tables.py
