[project]
name = "vikesesh-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-limiter>=4.1.1",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.2",
]
